# food-manager-server

./: .gitignore  docker-compose.development.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
server/: app.py  config.py  models.py  routes.py
