[tool.poetry]
name = "food-manager-server"
version = "0.1.0"
description = "A Python server for managing food expiration dates, providing notifications and reminders"
authors = ["Francesco Meli <iamfrancescomeli@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"